--- a/src/pswg/tools/devlaunch/resources/design/profiles.fxml
+++ b/src/pswg/tools/devlaunch/resources/design/profiles.fxml
@@ -1,13 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<Pane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-      minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/null"
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/null"
       fx:controller="pswg.tools.devlaunch.controllers.ProfilesController">
     <children>
-        <HBox/>
-        <Label layoutX="39.0" layoutY="100.0" text="Label"/>
+        <HBox>
+            <children>
+                <ListView/>
+                <GridPane>
+                    <columnConstraints>
+                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="13.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="3.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES"/>
+                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="4.0"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints percentHeight="1.0" vgrow="SOMETIMES"/>
+                        <RowConstraints vgrow="SOMETIMES"/>
+                        <RowConstraints vgrow="SOMETIMES"/>
+                        <RowConstraints vgrow="SOMETIMES"/>
+                        <RowConstraints vgrow="SOMETIMES"/>
+                        <RowConstraints vgrow="SOMETIMES"/>
+                        <RowConstraints vgrow="SOMETIMES"/>
+                        <RowConstraints percentHeight="3.0" vgrow="SOMETIMES"/>
+                    </rowConstraints>
+                    <children>
+                        <Label text="Profile Name" GridPane.rowIndex="1"/>
+                        <TextField GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+                        <Label text="Game Dir." GridPane.rowIndex="2"/>
+                        <TextField GridPane.columnIndex="2" GridPane.rowIndex="2"/>
+                        <Label text="Arguments" GridPane.rowIndex="3"/>
+                        <TextField GridPane.columnIndex="2" GridPane.rowIndex="3"/>
+                        <Label text="Server" GridPane.rowIndex="4"/>
+                        <TextField GridPane.columnIndex="2" GridPane.rowIndex="4"/>
+                        <Label text="Port" GridPane.rowIndex="5"/>
+                        <TextField GridPane.columnIndex="2" GridPane.rowIndex="5"/>
+                        <Label text="Display Img." GridPane.rowIndex="6"/>
+                        <TextField GridPane.columnIndex="2" GridPane.rowIndex="6"/>
+                    </children>
+                </GridPane>
+            </children>
+        </HBox>
+        <ToolBar nodeOrientation="RIGHT_TO_LEFT" VBox.vgrow="ALWAYS">
+            <items>
+                <Button mnemonicParsing="false" text="Apply Changes"/>
+            </items>
+        </ToolBar>
     </children>
-</Pane>
+</VBox>
